<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_one" android:checkableBehavior="single">
        <item
            android:title="@string/action_message"
            android:icon="@mipmap/xinfeng"/>
        <item
            android:title="@string/action_collection"
            android:icon="@mipmap/water"/>
        <item
            android:title="@string/action_upload"
            android:icon="@mipmap/warm"/>
        <item
            android:title="@string/action_bluetooth"
            android:icon="@mipmap/stat_sys_data_bluetooth"/>
    </group>

    <group android:id="@+id/group_two" android:checkableBehavior="single">
        <item
            android:title="@string/action_settings"
            android:icon="@mipmap/ic_menu_settings_holo_light"/>
        <item
            android:title="@string/action_about"
            android:icon="@mipmap/gas"/>
    </group>
</menu>