<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".activity.HomeActivity"
              tools:showIn="@layout/activity_home">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_archive"
        style="@style/CardViewHomeSlide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--表档案管理-->
        <LinearLayout
            android:background="@drawable/selector_background_white_pressed_little_gray"
            android:clickable="false"
            android:id="@+id/ll_manageArchive"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.mnlin.hotchpotch.view.LineMenuView
                app:LineMenuView_menu="@string/home_archive_menu"
                app:LineMenuView_switch="hide"
                app:LineMenuView_icon="@mipmap/icon_sys_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:padding="@dimen/prefer_view_padding_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_archive_add"
                    android:id="@+id/ctv_addArchive"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:text="@string/home_archive_update"
                    android:id="@+id/ctv_updateArchive"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_archive_delete"
                    android:id="@+id/ctv_deleteArchive"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_archive_query"
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:id="@+id/ctv_queryArchive"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <!--表档案管理的反面-->
        <!--android:rotationY="-180"-->
        <TextView
            android:alpha="0"
            android:visibility="gone"
            android:lineSpacingMultiplier="1.5"
            style="@style/TextViewStandard"
            android:background="@drawable/selector_background_white_pressed_little_gray"
            android:text="@string/home_archive_introduce"
            android:id="@+id/tv_archiveContrary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_meter"
        style="@style/CardViewHomeSlide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--智能表操控-->
        <LinearLayout
            android:background="@drawable/selector_background_white_pressed_little_gray"
            android:clickable="false"
            android:id="@+id/ll_operateMeter"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mnlin.hotchpotch.view.LineMenuView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:LineMenuView_icon="@mipmap/icon_sys_def"
                app:LineMenuView_menu="@string/home_meter_menu"
                app:LineMenuView_switch="hide" />

            <LinearLayout
                android:padding="@dimen/prefer_view_padding_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_meter_single_read"
                    android:id="@+id/ctv_readMeterSingle"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:text="@string/home_meter_manage_valve"
                    android:id="@+id/ctv_manageMeterValve"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_meter_set_parameter"
                    android:id="@+id/ctv_setMeterParameter"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_meter_batch_read"
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:id="@+id/ctv_readMeterBatch"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <!--智能表操控的反面-->
        <TextView
            android:alpha="0"
            android:visibility="gone"
            android:lineSpacingMultiplier="1.5"
            style="@style/TextViewStandard"
            android:background="@drawable/selector_background_white_pressed_little_gray"
            android:text="@string/home_meter_introduce"
            android:id="@+id/tv_meterContrary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_concentrator"
        style="@style/CardViewHomeSlide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--智能表操控-->
        <LinearLayout
            android:background="@drawable/selector_background_white_pressed_little_gray"
            android:clickable="false"
            android:id="@+id/ll_operateConcentrator"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.mnlin.hotchpotch.view.LineMenuView
                app:LineMenuView_menu="@string/home_concentrator_menu"
                app:LineMenuView_switch="hide"
                app:LineMenuView_icon="@mipmap/icon_sys_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:padding="@dimen/prefer_view_padding_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_concentrator_single_read"
                    android:id="@+id/ctv_readConcentratorSingle"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:text="@string/home_concentrator_manage_valve"
                    android:id="@+id/ctv_manageConcentratorValve"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_concentrator_set_parameter"
                    android:id="@+id/ctv_setConcentratorParameter"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.mnlin.hotchpotch.view.CircleTextView
                    android:text="@string/home_concentrator_batch_read"
                    android:layout_marginLeft="@dimen/prefer_view_padding_vertical"
                    android:id="@+id/ctv_readConcentratorBatch"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/selector_background_little_gray_pressed_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <!--智能表操控的反面-->
        <TextView
            android:alpha="0"
            android:visibility="gone"
            android:lineSpacingMultiplier="1.5"
            style="@style/TextViewStandard"
            android:background="@drawable/selector_background_white_pressed_little_gray"
            android:text="@string/home_concentrator_introduce"
            android:id="@+id/tv_concentratorContrary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v7.widget.CardView>

</LinearLayout>
